SOFTWARE/OPEN-PROJECTS/openproject-deploy-stable-12/kubernetes/03-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    openproject.service: db
spec:
  type: NodePort
  selector:
    openproject.service: db
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
