SOFTWARE/OPEN-PROJECTS/openproject-deploy-stable-12/kubernetes/09-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.openproject-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy
                port:
                  number: 80
